- Endpoint de categorias de produto atualizado para uma URI mais intuitiva. - Documentacao do swagger atualizada.
